# pulseboard

./: README.md
client/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/block/: AnalyticsDemo.tsx  Pricing.tsx
client/src/config/: cookieOptions.ts
client/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx  DefaultLayout.tsx  Footer.tsx  Navbar.tsx
client/src/lib/: api.ts  razorpay.d.ts
client/src/pages/: Home.tsx  Login.tsx  NotFound.tsx  Signup.tsx
client/src/pages/dashboard/: DashboardHome.tsx  DashboardSubscription.tsx
server/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
server/src/: app.py
server/src/api/: auth.py  ping.py  subscription.py
server/src/config/: database.py
server/src/lib/: pg.py
server/src/models/: models.py
server/src/utils/: security.py
